# Raft-consensus-protocol-with-gRPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lab3-release.patch  setup.sh
.ddb/: dbg_grpc.yaml
app/: CMakeLists.txt  kv_node.cpp  latency.cpp  multinode.cpp  raft_node.cpp  tput.cpp
bench/: lat-tput.py
cmake/wrappers/otel_spdlog/: CMakeLists.txt
cmake/wrappers/otel_spdlog/spdlog_shim/: spdlogConfig.cmake  spdlogConfigVersion.cmake
inc/common/: common.hpp  logger.hpp
inc/common/utils/: net_intercepter.hpp  tracing.hpp
inc/kv/: kv_client.hpp  kv_server.hpp
inc/rafty/: raft.hpp
inc/rafty/impl/: raft.ipp
inc/toolings/: msg_queue.hpp  raft_wrapper.hpp  test_config.hpp  test_ctrl.hpp
integration_tests/: CMakeLists.txt  extra_cases.cpp  extra_tests_lab2.cpp  kv_test.cpp  raft_test.cpp  raft_test_extra.cpp
proto/: CMakeLists.txt  kv.proto  raft.proto
scripts/: install_docker.sh  install_grpc.sh  install_grpcreplay.sh  install_otel.sh
src/: CMakeLists.txt  raft.cpp
tools/grafana-suite/: config.alloy  datasources.yaml  docker-compose.yml  tempo.yaml
tools/grpcr/: .gitignore  grpcreplay-record-multinode.sh  grpcreplay-record.sh  grpcreplay-replay-multinode.sh  grpcreplay-replay.sh
tools/jaeger-suite/: docker-compose.yml  jaeger-config.yaml  otel-collector-config.yaml
